Implemented OK Button

--- a/res/layout/save_notification.xml
+++ b/res/layout/save_notification.xml
@@ -9,5 +9,6 @@
               android:layout_height="wrap_content" />
     <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ok" />
+            android:text="@string/ok"
+            android:onClick="onOk" />
 </LinearLayout>
