Implemented Inspect Logs Button

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,7 +17,8 @@
                 android:onClick="onAddLog" />
         <Button android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/inspect_logs" />
+                android:text="@string/inspect_logs"
+                android:onClick="onInspectLogs" />
     </LinearLayout>
     <View android:layout_weight="1"
           android:layout_width="0dp"
