--- a/res/layout/add_log.xml
+++ b/res/layout/add_log.xml
@@ -6,6 +6,7 @@
     <EditText android:id="@+id/add_log_description"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
+              android:inputType="text"
               android:hint="@string/log_description_hint" />
     <LinearLayout android:orientation="horizontal"
                   android:layout_width="fill_parent"
